--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CESFAM Raúl Sánchez Bañados – Información para la comunidad</title>
 
-<!-- Fuente (opcional pero recomendado para look más “premium”) -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap" rel="stylesheet">
@@ -37,7 +36,7 @@
   header h1 { margin:6px 0 4px; font-size: clamp(22px,4.8vw,36px); letter-spacing:.3px; }
   header p { opacity:.95; margin:0; font-size: clamp(14px,2.6vw,18px); }
 
-  /* ===== HORARIOS DE ATENCIÓN (bajo el título) ===== */
+  /* ===== HORARIOS DE ATENCIÓN ===== */
   .main-schedule {
     background: rgba(255,255,255,.08);
     border: 1px solid rgba(255,255,255,.18);
@@ -120,52 +119,6 @@
   @keyframes fadeIn { from {opacity:0; transform: translateY(6px);} to {opacity:1; transform:none;} }
   @keyframes slideUp { to { transform:none; opacity:1; } }
 
-  /* ===== Banner Premium Actualiza Datos ===== */
-  .update-banner-pro {
-    margin: 34px 0 12px;
-    padding: 44px 26px;
-    border-radius: 26px;
-    background: linear-gradient(135deg, #f3ecff 0%, #ffffff 60%, #e9fff7 100%);
-    box-shadow: 0 25px 60px rgba(0,0,0,.25);
-    overflow: hidden;
-  }
-  .update-content {
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap: 28px;
-    flex-wrap:wrap;
-  }
-  .update-text { flex:1; min-width: 260px; }
-  .update-text h2 {
-    font-size: clamp(30px,5vw,56px);
-    font-weight: 900;
-    color: #6a2bbf;
-    margin: 0 0 14px;
-    line-height: 1.05;
-  }
-  .update-text p {
-    font-size: 18px;
-    color: #2e5d54;
-    margin: 0 0 22px;
-    max-width: 560px;
-  }
-  .update-btn {
-    display:inline-block;
-    background: linear-gradient(90deg, #6a2bbf, #8d52f2);
-    color:#fff;
-    padding: 14px 28px;
-    border-radius: 999px;
-    font-weight: 900;
-    text-decoration:none;
-    box-shadow: 0 14px 30px rgba(106,43,191,.35);
-    transition: transform .2s ease, box-shadow .2s ease;
-  }
-  .update-btn:hover { transform: scale(1.04); box-shadow: 0 18px 36px rgba(106,43,191,.45); }
-  .update-image { flex:1; min-width: 240px; text-align:right; }
-  .update-image img { width:100%; max-width: 420px; filter: drop-shadow(0 30px 40px rgba(0,0,0,.25)); }
-  @media (max-width: 768px){ .update-image { text-align:center; } }
-
   /* ===== Cards con imagen PRO (OIRS y Portal) ===== */
   .card-highlight{
     padding: 0;
@@ -241,6 +194,89 @@
     background: linear-gradient(90deg, #0f4c81, #1c5f9a);
     color:#fff;
   }
+
+  /* ===== Banner Moderno (como tu ejemplo) ===== */
+  .update-banner-modern{
+    margin: 40px 0 12px;
+    padding: 50px 40px;
+    border-radius: 30px;
+    background: linear-gradient(135deg, #f0e9ff 0%, #ffffff 40%, #e3f4ff 100%);
+    box-shadow: 0 35px 70px rgba(0,0,0,.25);
+    overflow: hidden;
+  }
+
+  .modern-content{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:40px;
+    flex-wrap:wrap;
+  }
+
+  .modern-text{
+    flex:1;
+    min-width:280px;
+  }
+
+  .modern-text h2{
+    font-size: clamp(36px,5vw,64px);
+    font-weight: 900;
+    color:#6a2bbf;
+    margin: 0 0 20px;
+    line-height: 1.05;
+  }
+
+  .modern-text p{
+    font-size: 18px;
+    color:#2e5d54;
+    margin: 0 0 25px;
+    max-width: 520px;
+  }
+
+  .modern-btn{
+    display:inline-block;
+    background: linear-gradient(90deg,#6a2bbf,#8d52f2);
+    color:#fff;
+    padding: 16px 34px;
+    border-radius: 999px;
+    font-weight: 900;
+    text-decoration:none;
+    box-shadow: 0 15px 35px rgba(106,43,191,.35);
+    transition: transform .25s ease, box-shadow .25s ease;
+  }
+
+  .modern-btn:hover{
+    transform: translateY(-3px);
+    box-shadow:0 20px 40px rgba(106,43,191,.45);
+  }
+
+  .modern-sub{
+    margin-top: 18px;
+    font-size: 15px;
+    color: #3a3a3a;
+    opacity: .8;
+  }
+
+  .modern-image{
+    flex:1;
+    min-width:300px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
+
+  .modern-image img{
+    width:100%;
+    max-width: 520px;
+    height:auto;
+    object-fit: contain;
+    border-radius: 22px;
+    box-shadow: 0 18px 40px rgba(0,0,0,.18);
+  }
+
+  @media (max-width:768px){
+    .update-banner-modern{ padding: 36px 22px; }
+  }
 </style>
 </head>
 
@@ -308,7 +344,7 @@
           </ul>
         </article>
 
-        <!-- ✅ Teléfonos: UNA SOLA VEZ + Amarillo clickeable + botones -->
+        <!-- Teléfonos: una sola vez + amarillo correcto -->
         <article class="card" style="--delay:.35s">
           <h3>☎️ Teléfonos de contacto</h3>
           <ul>
@@ -384,27 +420,36 @@
 
       </div>
 
-      <!-- ✅ Banner: misma estructura, pero con tu foto local -->
-      <section class="update-banner-pro" aria-label="Actualiza tus datos de contacto">
-        <div class="update-content">
-          <div class="update-text">
+      <!-- Banner final moderno con tu imagen -->
+      <section class="update-banner-modern" aria-label="Actualiza tus datos de contacto">
+        <div class="modern-content">
+
+          <div class="modern-text">
             <h2>ACTUALIZA<br>TUS DATOS</h2>
+
             <p>
               Si has cambiado de dirección o número de teléfono en los últimos seis meses,
               te invitamos a actualizar tu información.
             </p>
+
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
                target="_blank" rel="noopener"
-               class="update-btn">
+               class="modern-btn">
               ACTUALIZAR MIS DATOS →
             </a>
+
+            <div class="modern-sub">
+              ✔ Rápido • Seguro • Confidencial
+            </div>
           </div>
 
-          <div class="update-image">
-            <!-- 👇 TU IMAGEN LOCAL -->
-            <img src="img/actualiza-datos.png" alt="Actualiza tus datos" loading="lazy"
-                 onerror="this.style.display='none'">
+          <div class="modern-image">
+            <img src="img/actualiza-datos.png"
+                 alt="Actualiza tus datos"
+                 loading="lazy"
+                 onerror="this.style.display='none';">
           </div>
+
         </div>
       </section>
 
