--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     color:#fff;
   }
 
-  /* ===== Banner Moderno (como tu ejemplo) ===== */
+  /* ===== Banner Moderno Final (con tu imagen) ===== */
   .update-banner-modern{
     margin: 40px 0 12px;
     padding: 50px 40px;
@@ -272,6 +272,7 @@
     object-fit: contain;
     border-radius: 22px;
     box-shadow: 0 18px 40px rgba(0,0,0,.18);
+    background: rgba(255,255,255,.35);
   }
 
   @media (max-width:768px){
@@ -420,7 +421,7 @@
 
       </div>
 
-      <!-- Banner final moderno con tu imagen -->
+      <!-- Banner final moderno con tu imagen (NO como link en la imagen, sino imagen visible + botón) -->
       <section class="update-banner-modern" aria-label="Actualiza tus datos de contacto">
         <div class="modern-content">
 
